@@ -1026,7 +1026,14 @@ QuartzWritableDatabase::replace_document(Xapian::docid did,
 		new_doclen, false);
 
 	// Set the new document length
-	doclens.insert(make_pair(did, new_doclen));
+	{
+	    map<Xapian::docid, Xapian::termcount>::iterator k = doclens.find(did);
+	    if (k == doclens.end()) {
+		doclens.insert(make_pair(did, new_doclen));
+	    } else {
+		k->second = new_doclen;
+	    }
+	}
 	total_length += new_doclen;
     } catch (const Xapian::DocNotFoundError &) {
 	(void)add_document_(did, document);
