@@ -1,3 +1,7 @@
+Mon Apr 09 11:29:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* backends/quartz/quartz_database.cc: Apply same change to quartz.
+
 Mon Apr 09 11:24:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* backends/flint/flint_database.cc: Fix bug with document lengths
